Correct alignment for "Failed logins" and "Last access" headers

--- a/frontend/src/modules/userManagement/less/userManagement.less
+++ b/frontend/src/modules/userManagement/less/userManagement.less
@@ -79,6 +79,10 @@
       .form-container-style;
       max-width: inherit;
       .tb-heading {
+        .col-centered {
+          display: flex;
+          justify-content: center;
+        }
         > div button {
           display: flex;
           align-items: center;
